
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int getppid () ;
 int kill (int,int) ;
 scalar_t__ proc_r () ;
 int sf_exit () ;

void re_connt_lm(int st_sock_va,int type)
{
 if(st_sock_va==-1)
 {
  if(!type){
   kill(getppid(),9);
  }
  kill((int)proc_r(),9);
  sf_exit();
 }
}
